Added some automation and some more flags

--- a/mipt/5_term/razryv/Makefile
+++ b/mipt/5_term/razryv/Makefile
@@ -1,10 +1,14 @@
 NAME = razryv1
 
-.PHONY: all clean
+.PHONY: all clean clean_all
 
 all:
 	gcc -o $(NAME) $(NAME).c -lm
+	./gen_results.sh
 
 clean:
 	rm -f *.o
 	rm -f $(NAME)
+
+clean_all: clean
+	rm -r results
