Added 2 variant support and data

--- a/mipt/5_term/razryv/Makefile
+++ b/mipt/5_term/razryv/Makefile
@@ -1,12 +1,15 @@
 NAME = razryv
 
-.PHONY: compile all clean clean_all
+.PHONY: compile all clean clean_all debug
 
 compile:
 	gcc -o $(NAME) $(NAME).c -lm
 
 all: compile
 	./gen_results.sh
+
+debug:
+	gcc -o $(NAME) $(NAME).c -lm -g
 
 clean:
 	rm -f *.o
