Implemented dichotomy root calculation

--- a/mipt/5_term/razryv/Makefile
+++ b/mipt/5_term/razryv/Makefile
@@ -11,7 +11,7 @@ all: compile
 debug:
 	gcc -o $(NAME) $(NAME).c -lm -g
 
-calculations.o:
+calculations.o: calculations.c
 	gcc -c -o calculations.o calculations.c
 
 clean:
